<resources>
    <string name="app_name">Lv2</string>
    <string name="welcome"><u>Welcome!</u></string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="login_password">密码</string>
    <string name="login_username">账号</string>
    <string name="register_username">要注册的账号</string>
    <string name="register_password">要注册的密码</string>
    <string name="register_registerNow">立即注册</string>
    <string name="Remember_password">记住密码</string>
</resources>